--- a/gradleTest1/src/main/resources/application.properties
+++ b/gradleTest1/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 
+server.port=80
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
+
+#database set
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3606/kangdongwook
+spring.datasource.username=KangDongWook
+spring.datasource.password=1q2w3e4r!
